# parallel-fibonacci

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
benches/: fib_benchmark.rs
src/: fibonacci.rs  lib.rs  math.rs
