[package]
edition = "2021"
name = "fibonacci_assesment"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
tokio = {version = "1.37.0", features = ["full"]}
rayon = "*"
kanal = "0.1.0-pre8"
num-bigint = "0.4"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "fib_benchmark"
harness = false
